Fixed navbar spacing.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -90,6 +90,7 @@ nav *{
 }
 
 nav a{
+	padding: 0.75rem;
 	text-decoration: none;
 	font-size: 100%;
 	transition: transform 0.1s ease;
@@ -113,6 +114,7 @@ nav a{
 }
 
 #name{
+	margin: 0.5rem;
 	font-size: 300%;
 	color: black;
 }
